@@ -168,11 +168,20 @@ sub do_check {
 
     step result_cb => sub {
 	(my $err, $res, $label, $mode) = @_;
-	return failure($err, $finished_cb) if $err;
+	if ($err) {
+	    if ($res) {
+		$res->release(finished_cb => sub {
+		    return failure($err, $finished_cb);
+		});
+		return;
+	    } else {
+		return failure($err, $finished_cb);
+	    }
+	}
 
 	my $modestr = ($mode == $ACCESS_APPEND)? "append" : "write";
 	my $slot = $res->{'this_slot'};
-	if (defined $res->{'device'}->volume_label()) {
+	if (defined $res->{'device'} and defined $res->{'device'}->volume_label()) {
 	    print "Will $modestr to volume '$label' in slot $slot.\n";
 	} else {
 	    print "Will $modestr label '$label' to new volume in slot $slot.\n";
